# discord-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.develop  Dockerfile.production  LICENSE  README.md  compose.prod.yml  docker-compose.db.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: build-deploy.yml  check.yml  codeql.yml  test-clippy.yml
.mongodb/cfg/: init-mongo.js  init-mongo.sh  mongod.conf
benches/: ascii_bench.rs
scripts/: rs-init.js
src/: context.rs  dispatch.rs  lib.rs  main.rs
src/bot/: mod.rs  worker.rs
src/commands/: help.rs  intro.rs  mod.rs  ping.rs  verify.rs
src/commands/admin/: channel.rs  mod.rs  role.rs  scam_detect.rs
src/commands/ai/: mod.rs
src/commands/warframe/: build.rs  market.rs  mod.rs
src/configs/: app.rs  discord.rs  google.rs  mod.rs  mongo.rs  notifications.rs  redis.rs  scam_detect.rs
src/context/: builder.rs  context.rs  discord_http.rs  mod.rs  tests.rs
src/context/test_utils/: mock_builder.rs  mock_context.rs  mock_http.rs  mock_reqwest.rs  mod.rs
src/dbs/: redis.rs
src/dbs/mongo/: ai_prompt.rs  client.rs  message.rs  mod.rs  mongodb.rs  monitor.rs  role_message.rs  status_message.rs  test_utils.rs  tests.rs  watcher.rs  watchers.rs
src/dbs/redis/: client.rs  mod.rs  test_utils.rs  tests.rs
src/events/: guild_create.rs  interaction_create.rs  member_add.rs  member_remove.rs  message_create.rs  message_delete.rs  mod.rs  reaction_add.rs  reaction_remove.rs  ready.rs  voice_state_update.rs
src/events/message_create/: ai.rs  broadcast.rs  mod.rs  quarantine.rs
src/features/: admin.rs  ai.rs  help.rs  member_onboarding.rs  message_pipeline.rs  mod.rs  ping.rs  reaction_roles.rs  registry.rs  role_messages.rs  runtime.rs  voice_logs.rs  warframe.rs
src/features/intro/: command.rs  mod.rs  modal.rs
src/features/verification/: command.rs  mod.rs  modal.rs
src/macros/: defer_interaction.rs  guild_command.rs  handle_ephemeral.rs  mod.rs  open_dm.rs  send_fallback.rs
src/observability/: metrics.rs  server.rs
src/platform/: mod.rs
src/platform/testkit/: onboarding.rs
src/services/: ai.rs  broadcast.rs  build.rs  channel.rs  guild_settings.rs  health.rs  http.rs  introduction.rs  latency.rs  market.rs  mod.rs  notification.rs  role.rs  role_message.rs  scam_detect.rs  shutdown.rs  spam.rs  status.rs  status_message.rs  warframe.rs
src/services/ai/: attachments.rs  client.rs  embed.rs  genai.rs  history.rs  interaction.rs  mod.rs  models.rs  rate_limit.rs  scheduler.rs  tests.rs
src/services/broadcast/: embed.rs  mod.rs
src/slices/: admin_config.rs  ai_assistant.rs  community_roles.rs  mod.rs  moderation.rs  registry.rs  runtime.rs  warframe.rs
src/tests/: ai_service_tests.rs  ascii_tests.rs  build_cache_utils.rs  build_market_tests.rs  command_parsing_tests.rs  context_startup_tests.rs  etag_cache_tests.rs  health_service_tests.rs  intro_service_tests.rs  market_service_tests.rs  message_create_tests.rs  mock_db.rs  mock_http.rs  mod.rs  redis_setup.rs  service_loop_tests.rs  spam_service_tests.rs  utils_macros_tests.rs  warframe_notification_tests.rs  watcher_session_tests.rs
src/utils/: ascii.rs  comparator.rs  env.rs  http.rs  interaction.rs  mod.rs  modal.rs  reaction.rs
src/warframe/: api.rs  embed.rs  mod.rs  utils.rs
tests/: broadcast_service_tests.rs  command_flow.rs  command_parsing_tests.rs  context_build.rs  context_startup_tests.rs  event_flow_tests.rs  event_routing.rs  health_service_tests.rs  market_service_tests.rs  onboarding_slice.rs  service_loop_tests.rs  spam_service_tests.rs  warframe_notification_tests.rs  watcher_session_tests.rs
tests/utils/: build_cache_utils.rs  context.rs  event.rs  guild.rs  interaction.rs  mock_context.rs  mock_db.rs  mock_http.rs  mock_reqwest.rs  mod.rs  notify_mock.rs  redis_setup.rs  utils_macros_tests.rs
(+74 files in other folders)
