[package]
name = "discord-bot"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
deadpool-redis = "0.22"
mongodb = "3.2"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = "0.16"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-interactions = "0.16"
twilight-model = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
fastrand = "2.3"
futures = "0.3"
chrono = { version = "0.4", features = ["std", "clock", "serde"] }
sha2 = "0.10"
hex = "0.4"
google-ai-rs = { version = "0.1", features = ["serde"] }
axum = "0.8"
tokio-util = "0.7"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.6", features = ["real_blackbox"] }

[[bench]]
name = "ascii_bench"
path = "benches/ascii_bench.rs"
harness = false
