[package]
name = "discord-bot"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
anyhow = "1.0.102"
deadpool-redis = "0.23.0"
mongodb = "3.6.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-interactions = "0.17.0"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
reqwest = { version = "0.13.3", features = ["json", "stream"] }
fastrand = "2.3.0"
futures = "0.3.32"
chrono = { version = "0.4.44", features = ["std", "clock", "serde"] }
sha2 = "0.10.9"
hex = "0.4.3"
axum = "0.8.9"
tokio-util = "0.7.18"
async-trait = "0.1.89"
metrics = "0.24.4"
metrics-exporter-prometheus = "0.18.3"
mockall = "0.13.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["real_blackbox"] }

[features]
test-utils = []

[[bench]]
name = "ascii_bench"
path = "benches/ascii_bench.rs"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
